--- a/monopoly/src/tile_en.properties
+++ b/monopoly/src/tile_en.properties
@@ -3,18 +3,18 @@
 #
 
 #TERRAIN
-tile3-name = Mediterranean Avenue
-tile3-price = 60
-tile3-houseCost = 50
-tile3-hotelCost = 50
-tile3-rent = 2
-tile3-rent1house = 10 
-tile3-rent2house = 30
-tile3-rent3house = 90
-tile3-rent4house = 160
-tile3-renthotel = 250
-tile3-group = purple
-tile3-mortgageValue=30
+tile1-name = Mediterranean Avenue
+tile1-price = 60
+tile1-houseCost = 50
+tile1-hotelCost = 50
+tile1-rent = 2
+tile1-rent1house = 10 
+tile1-rent2house = 30
+tile1-rent3house = 90
+tile1-rent4house = 160
+tile1-renthotel = 250
+tile1-group = purple
+tile1-mortgageValue=30
 
 #TERRAIN
 tile3-name = Baltic Avenue
@@ -114,16 +114,211 @@ tile14-renthotel = 900
 tile14-group = magenta
 tile14-mortgageValue=80
 
+#TERRAIN
+tile16-name = St. James Place
+tile16-price = 180
+tile16-houseCost = 100
+tile16-hotelCost = 100
+tile16-rent = 14
+tile16-rent1house = 70
+tile16-rent2house = 200
+tile16-rent3house = 550
+tile16-rent4house = 750
+tile16-renthotel = 950
+tile16-group = orange
+tile16-mortgageValue=90
 
 
+#TERRAIN
+tile18-name = Tennessee Avenue
+tile18-price = 180
+tile18-houseCost = 100
+tile18-hotelCost = 100
+tile18-rent = 14
+tile18-rent1house = 70
+tile18-rent2house = 200
+tile18-rent3house = 550
+tile18-rent4house = 750
+tile18-renthotel = 950
+tile18-group = orange
+tile18-mortgageValue=90
 
 
+#TERRAIN
+tile19-name = New York Avenue
+tile19-price = 200
+tile19-houseCost = 100
+tile19-hotelCost = 100
+tile19-rent = 16
+tile19-rent1house = 80
+tile19-rent2house = 220
+tile19-rent3house = 600
+tile19-rent4house = 800
+tile19-renthotel = 1000
+tile19-group = orange
+tile19-mortgageValue=100
 
 
+#TERRAIN
+tile21-name = Kentucky Avenue
+tile21-price = 220
+tile21-houseCost = 150
+tile21-hotelCost = 150
+tile21-rent = 18
+tile21-rent1house = 90
+tile21-rent2house = 250
+tile21-rent3house = 700
+tile21-rent4house = 8700
+tile21-renthotel = 875
+tile21-group = red
+tile21-mortgageValue=110
+
+#TERRAIN
+tile23-name = Indiana Avenue
+tile23-price = 220
+tile23-houseCost = 150
+tile23-hotelCost = 150
+tile23-rent = 18
+tile23-rent1house = 90
+tile23-rent2house = 250
+tile23-rent3house = 700
+tile23-rent4house = 875
+tile23-renthotel = 1050
+tile23-group = red
+tile23-mortgageValue=110
 
 
+#TERRAIN
+tile24-name = Illinois Avenue
+tile24-price = 240
+tile24-houseCost =150
+tile24-hotelCost =150
+tile24-rent = 20
+tile24-rent1house = 100
+tile24-rent2house = 300
+tile24-rent3house = 750
+tile24-rent4house = 925
+tile24-renthotel = 1100
+tile24-group = red
+tile24-mortgageValue=120
 
 
+#TERRAIN
+tile26-name = Atlantic Avenue
+tile26-price = 260
+tile26-houseCost =150
+tile26-hotelCost =150
+tile26-rent = 22
+tile26-rent1house = 110
+tile26-rent2house = 330
+tile26-rent3house = 800
+tile26-rent4house = 975
+tile26-renthotel = 1150
+tile26-group = yellow
+tile26-mortgageValue=130
+
+
+#TERRAIN
+tile27-name = Ventnor Avenue
+tile27-price =260
+tile27-houseCost =150
+tile27-hotelCost =150
+tile27-rent =22
+tile27-rent1house = 110
+tile27-rent2house = 330
+tile27-rent3house = 800
+tile27-rent4house = 975
+tile27-renthotel = 1150
+tile27-group = yellow
+tile27-mortgageValue= 130
+
+#TERRAIN
+tile29-name = Marvin Gardens
+tile29-price =  280
+tile29-houseCost = 150
+tile29-hotelCost = 150
+tile29-rent = 24
+tile29-rent1house = 120
+tile29-rent2house = 360
+tile29-rent3house = 850
+tile29-rent4house = 1025
+tile29-renthotel = 1200
+tile29-group = yellow
+tile29-mortgageValue= 140
+
+#TERRAIN
+tile31-name = Pacific Avenue
+tile31-price = 300
+tile31-houseCost = 200 
+tile31-hotelCost = 200
+tile31-rent = 26
+tile31-rent1house = 130
+tile31-rent2house = 390
+tile31-rent3house = 900
+tile31-rent4house = 1100
+tile31-renthotel = 1275
+tile31-group = green
+tile31-mortgageValue= 150
+
+
+#TERRAIN
+tile32-name = North Carolina Avenue
+tile32-price = 300
+tile32-houseCost = 200 
+tile32-hotelCost = 200
+tile32-rent = 26
+tile32-rent1house = 130
+tile32-rent2house = 390
+tile32-rent3house = 900
+tile32-rent4house = 1100
+tile32-renthotel = 1275
+tile32-group = green
+tile32-mortgageValue= 150
+
+
+#TERRAIN
+tile34-name = Pennsylvania Avenue
+tile34-price = 320
+tile34-houseCost = 200 
+tile34-hotelCost = 200
+tile34-rent = 28
+tile34-rent1house = 150
+tile34-rent2house = 450
+tile34-rent3house = 1000
+tile34-rent4house = 1200
+tile34-renthotel = 1400
+tile34-group = green
+tile34-mortgageValue= 160
+
+
+#TERRAIN
+tile37-name = Park Place
+tile37-price = 350
+tile37-houseCost = 200  
+tile37-hotelCost = 200
+tile37-rent = 35
+tile37-rent1house =  175
+tile37-rent2house =  500
+tile37-rent3house =  1100
+tile37-rent4house = 1300
+tile37-renthotel =  1500
+tile37-group = blue
+tile37-mortgageValue= 175
+
+
+#TERRAIN
+tile39-name = Boardwalk
+tile39-price = 400
+tile39-houseCost = 200
+tile39-hotelCost = 200
+tile39-rent = 50
+tile39-rent1house =  200
+tile39-rent2house = 600
+tile39-rent3house = 1400
+tile39-rent4house = 1700
+tile39-renthotel = 200
+tile39-group = blue
+tile39-mortgageValue= 200
 
 
 
