continued development of Tile classes, tested change of ownership with property, created class Railroad, implemented method feeToCharge for terrain and railroad

--- a/monopoly/src/tile_en.properties
+++ b/monopoly/src/tile_en.properties
@@ -2,6 +2,16 @@
 #File Name : tile_en.properties
 #
 
+#RAILROADS
+tile5-name = Reading Railroad
+tile15-name = Pennsylvania Railroad
+tile25-name = B&O Railroad
+tile35-name = Short Line
+Railroad-price = 200
+Railroad-rent = 25
+Railroad-group = railroad
+Railroad-mortgageValue=100
+
 #TERRAIN
 tile1-name = Mediterranean Avenue
 tile1-price = 60
@@ -316,7 +326,7 @@ tile39-rent1house =  200
 tile39-rent2house = 600
 tile39-rent3house = 1400
 tile39-rent4house = 1700
-tile39-renthotel = 200
+tile39-renthotel = 2000
 tile39-group = blue
 tile39-mortgageValue= 200
 
