Creation of NonProperty classes and began creation of Event classes

--- a/monopoly/src/tile_en.properties
+++ b/monopoly/src/tile_en.properties
@@ -2,6 +2,12 @@
 #File Name : tile_en.properties
 #
 
+#UTILITIES
+tile12-name = Electric Company
+tile28-name = Water Works
+utility-price = 150
+utility-mortgageValue = 75
+
 #RAILROADS
 tile5-name = Reading Railroad
 tile15-name = Pennsylvania Railroad
