GameClient creates board, board delegate tile creation to class TileCreator.
Began creation of Chance Card Events, All movementEvents are finished.

--- a/monopoly/src/chance_en.properties
+++ b/monopoly/src/chance_en.properties
@@ -4,16 +4,41 @@
 
 #CHANCE CARDS
 
-#GET FIXED SUM CARDS
-card1-name = 
-card1-text =
-card1-newPosition = 
+
 
 #MOVEMENT CARDS
-cardX-name =
-cardX-text =
-cardX-newPosition = 
+card0-name =Back you go!
+card0-cardText = Go back 3 spaces  
+card0-newPosition = -3
 
+card1-name = Advance to Pennsylvania Railroad
+card1-cardText = Take a trip to Pennsylvania Railroad - if you pass Go, collect $200
+card1-newPosition = 15
+
+card2-name = Advance to St. Charles Place
+card2-cardText = Advance to St. Charles Place – if you pass Go, collect $200 
+card2-newPosition = 11
+
+card3-name = Advance to Illinois Ave
+card3-cardText = Advance to Illinois Ave - if you pass Go, collect $200  
+card3-newPosition = 24
+
+card4-name = Advance to Go
+card4-cardText = Advance to Go (Collect $200) 
+card4-newPosition = 0
+
+card5-name = Take a walk on the Boardwalk
+card5-cardText = Take a walk on the Boardwalk – advance token to Boardwalk 
+card5-newPosition = 39
+
+card6-name = Go directly to Jail
+card6-cardText = Go directly to Jail – do not pass Go, do not collect $200 
+card6-newPosition = 10
+
+
+
+
+#GET FIXED SUM CARDS
 
 
 #CASH TRANSFER CARDS
