Tried to write a test for the network communication. Problem: the client is terminating the connectiong Otherwise I think the server should have successfully send a message. You can start NetServerTest and then NetClientTest to get a connection

--- a/monopoly/src/chance_en.properties
+++ b/monopoly/src/chance_en.properties
@@ -11,7 +11,7 @@ card0-name =Back you go!
 card0-cardText = Go back 3 spaces  
 card0-newPosition = -3
 
-card1-name = Advance to Pennsylvania Railroad
+card1-name = 
 card1-cardText = Take a trip to Pennsylvania Railroad - if you pass Go, collect $200
 card1-newPosition = 15
 
