polished up the tile classes.  They call their super constructors to set the instance variables.  TileCreator creates all tiles in a uniform manner, tested and checked.

--- a/monopoly/src/tile_en.properties
+++ b/monopoly/src/tile_en.properties
@@ -195,7 +195,7 @@ tile12-name = Electric Company
 tile12-price = 150
 tile12-houseCost = NULL
 tile12-hotelCost = NULL
-tile12-rent = 25
+tile12-rent = NULL
 tile12-rent1house = NULL 
 tile12-rent2house = NULL
 tile12-rent3house = NULL
@@ -446,7 +446,7 @@ tile28-name = Water Works
 tile28-price = 150
 tile28-houseCost = NULL
 tile28-hotelCost = NULL
-tile28-rent = 25
+tile28-rent = NULL
 tile28-rent1house = NULL 
 tile28-rent2house = NULL
 tile28-rent3house = NULL
