--- a/monopoly/src/tile_en.properties
+++ b/monopoly/src/tile_en.properties
@@ -19,6 +19,9 @@ Railroad-group = railroad
 Railroad-mortgageValue=100
 
 #TERRAIN
+tile1-id = 1
+tile1-x = 9
+tile1-y = 10
 tile1-name = Mediterranean Avenue
 tile1-price = 60
 tile1-houseCost = 50
@@ -32,7 +35,11 @@ tile1-renthotel = 250
 tile1-group = purple
 tile1-mortgageValue=30
 
+
 #TERRAIN
+tile3-id = 3
+tile3-x = 7
+tile3-y = 10
 tile3-name = Baltic Avenue
 tile3-price = 60
 tile3-houseCost = 50
@@ -47,6 +54,9 @@ tile3-group = purple
 tile3-mortgageValue=30
 
 #TERRAIN
+tile6-id = 6
+tile6-x = 4
+tile6-y = 10
 tile6-name = Oriental Avenue
 tile6-price = 100
 tile6-houseCost = 50
@@ -61,6 +71,9 @@ tile6-group = cyan
 tile6-mortgageValue=50
 
 #TERRAIN
+tile8-id = 8
+tile8-x = 2
+tile8-y = 10
 tile8-name = Vermont Avenue
 tile8-price = 100
 tile8-houseCost = 50
@@ -75,7 +88,10 @@ tile8-group = cyan
 tile8-mortgageValue=50
 
 #TERRAIN
-tile9-name = Oriental Avenue
+tile9-id = 9
+tile9-x = 1
+tile9-y = 10
+tile9-name = Connecticut Avenue
 tile9-price = 120
 tile9-houseCost = 50
 tile9-hotelCost = 50
