--- a/monopoly/src/chance_en.properties
+++ b/monopoly/src/chance_en.properties
@@ -16,7 +16,7 @@ card1-cardText = Take a trip to Pennsylvania Railroad - if you pass Go, collect 
 card1-newPosition = 15
 
 card2-name = Advance to St. Charles Place
-card2-cardText = Advance to St. Charles Place – if you pass Go, collect $200 
+card2-cardText = Advance to St. Charles Place - if you pass Go, collect $200 
 card2-newPosition = 11
 
 card3-name = Advance to Illinois Ave
@@ -28,11 +28,11 @@ card4-cardText = Advance to Go (Collect $200)
 card4-newPosition = 0
 
 card5-name = Take a walk on the Boardwalk
-card5-cardText = Take a walk on the Boardwalk – advance token to Boardwalk 
+card5-cardText = Take a walk on the Boardwalk - advance token to Boardwalk 
 card5-newPosition = 39
 
 card6-name = Go directly to Jail
-card6-cardText = Go directly to Jail – do not pass Go, do not collect $200 
+card6-cardText = Go directly to Jail - do not pass Go, do not collect $200 
 card6-newPosition = 10
 
 
