--- a/monopoly/src/tile_en.properties
+++ b/monopoly/src/tile_en.properties
@@ -16,8 +16,8 @@ tile0-rent4house = NULL
 tile0-renthotel = NULL
 tile0-group = cornersAndTax
 tile0-mortgageValue=NULL
-tile0-coordX = 0000000
-tile0-coordY = 0000000
+tile0-coordX = 10
+tile0-coordY = 10
 
 tile1-name = Mediterranean Avenue
 tile1-price = 60
@@ -31,8 +31,8 @@ tile1-rent4house = 160
 tile1-renthotel = 250
 tile1-group = purple
 tile1-mortgageValue=30
-tile1-coordX = 0000000
-tile1-coordY = 0000000
+tile1-coordX = 9
+tile1-coordY = 10
 
 #TERRAIN
 tile2-name = Community Chest
@@ -47,8 +47,8 @@ tile2-rent4house = NULL
 tile2-renthotel = NULL
 tile2-group = Community Chest
 tile2-mortgageValue=NULL
-tile2-coordX = 0000000
-tile2-coordY = 0000000
+tile2-coordX = 8
+tile2-coordY = 10
 
 tile3-name = Baltic Avenue
 tile3-price = 60
@@ -62,8 +62,8 @@ tile3-rent4house = 320
 tile3-renthotel = 480
 tile3-group = purple
 tile3-mortgageValue=30
-tile3-coordX = 0000000
-tile3-coordY = 0000000
+tile3-coordX = 7
+tile3-coordY = 10
 
 #TERRAIN
 tile4-name = Income Tax
@@ -78,8 +78,8 @@ tile4-rent4house = NULL
 tile4-renthotel = NULL
 tile4-group = cornersAndTax
 tile4-mortgageValue=NULL
-tile4-coordX = 0000000
-tile4-coordY = 0000000
+tile4-coordX = 6
+tile4-coordY = 10
 
 
 tile5-name = Reading Railroad
@@ -94,8 +94,8 @@ tile5-rent4house = NULL
 tile5-renthotel = NULL
 tile5-group = railroad
 tile5-mortgageValue= 100
-tile5-coordX = 0000000
-tile5-coordY = 0000000
+tile5-coordX = 5
+tile5-coordY = 10
 
 
 
@@ -111,8 +111,8 @@ tile6-rent4house = 400
 tile6-renthotel = 550
 tile6-group = cyan
 tile6-mortgageValue=50
-tile6-coordX = 0000000
-tile6-coordY = 0000000
+tile6-coordX = 4
+tile6-coordY = 10
 
 tile7-name = Chance
 tile7-price = NULL
@@ -126,8 +126,8 @@ tile7-rent4house = NULL
 tile7-renthotel = NULL
 tile7-group = Chance
 tile7-mortgageValue=NULL
-tile7-coordX = 0000000
-tile7-coordY = 0000000
+tile7-coordX = 3
+tile7-coordY = 10
 
 tile8-name = Vermont Avenue
 tile8-price = 100
@@ -141,8 +141,8 @@ tile8-rent4house = 400
 tile8-renthotel = 550
 tile8-group = cyan
 tile8-mortgageValue=50
-tile8-coordX = 0000000
-tile8-coordY = 0000000
+tile8-coordX = 2
+tile8-coordY = 10
 
 tile9-name = Oriental Avenue
 tile9-price = 120
@@ -156,8 +156,8 @@ tile9-rent4house = 450
 tile9-renthotel = 600
 tile9-group = cyan
 tile9-mortgageValue=60
-tile9-coordX = 0000000
-tile9-coordY = 0000000
+tile9-coordX = 1
+tile9-coordY = 10
 
 tile10-name = Jail
 tile10-price = NULL
@@ -171,8 +171,8 @@ tile10-rent4house = NULL
 tile10-renthotel = NULL
 tile10-group = cornersAndTax
 tile10-mortgageValue=NULL
-tile10-coordX = 0000000
-tile10-coordY = 0000000
+tile10-coordX = 0
+tile10-coordY = 10
 
 tile11-name = St. Charles Place
 tile11-price = 140
@@ -186,8 +186,8 @@ tile11-rent4house = 625
 tile11-renthotel = 750
 tile11-group = magenta
 tile11-mortgageValue=70
-tile11-coordX = 0000000
-tile11-coordY = 0000000
+tile11-coordX = 0
+tile11-coordY = 9
 
 tile12-name = Electric Company
 tile12-price = 150
@@ -201,8 +201,8 @@ tile12-rent4house = NULL
 tile12-renthotel = NULL
 tile12-group = utility
 tile12-mortgageValue= 75
-tile12-coordX = 0000000
-tile12-coordY = 0000000
+tile12-coordX = 0
+tile12-coordY = 8
 
 tile13-name = States Avenue
 tile13-price = 140
@@ -216,8 +216,8 @@ tile13-rent4house = 625
 tile13-renthotel = 750
 tile13-group = magenta
 tile13-mortgageValue=70
-tile13-coordX = 0000000
-tile13-coordY = 0000000
+tile13-coordX = 0
+tile13-coordY = 7
 
 
 
@@ -233,8 +233,8 @@ tile14-rent4house = 700
 tile14-renthotel = 900
 tile14-group = magenta
 tile14-mortgageValue=80
-tile14-coordX = 0000000
-tile14-coordY = 0000000
+tile14-coordX = 0
+tile14-coordY = 6
 
 
 tile15-name = Pennsylvania Railroad
@@ -249,8 +249,8 @@ tile15-rent4house = NULL
 tile15-renthotel = NULL
 tile15-group = railroad
 tile15-mortgageValue= 100
-tile15-coordX = 0000000
-tile15-coordY = 0000000
+tile15-coordX = 0
+tile15-coordY = 5
 
 
 tile16-name = St. James Place
@@ -265,8 +265,8 @@ tile16-rent4house = 750
 tile16-renthotel = 950
 tile16-group = orange
 tile16-mortgageValue=90
-tile16-coordX = 0000000
-tile16-coordY = 0000000
+tile16-coordX = 0
+tile16-coordY = 4
 
 
 tile17-name = Community Chest
@@ -281,8 +281,8 @@ tile17-rent4house = NULL
 tile17-renthotel = NULL
 tile17-group = Community Chest
 tile17-mortgageValue=NULL
-tile17-coordX = 0000000
-tile17-coordY = 0000000
+tile17-coordX = 0
+tile17-coordY = 3
 
 
 tile18-name = Tennessee Avenue
@@ -297,8 +297,8 @@ tile18-rent4house = 750
 tile18-renthotel = 950
 tile18-group = orange
 tile18-mortgageValue=90
-tile18-coordX = 0000000
-tile18-coordY = 0000000
+tile18-coordX = 0
+tile18-coordY = 2
 
 
 tile19-name = New York Avenue
@@ -313,8 +313,8 @@ tile19-rent4house = 800
 tile19-renthotel = 1000
 tile19-group = orange
 tile19-mortgageValue=100
-tile19-coordX = 0000000
-tile19-coordY = 0000000
+tile19-coordX = 0
+tile19-coordY = 1
 
 tile20-name = Free Parking
 tile20-price = NULL
@@ -328,8 +328,8 @@ tile20-rent4house = NULL
 tile20-renthotel = NULL
 tile20-group = cornersAndTax
 tile20-mortgageValue=NULL
-tile20-coordX = 0000000
-tile20-coordY = 0000000
+tile20-coordX = 0
+tile20-coordY = 0
 
 tile21-name = Kentucky Avenue
 tile21-price = 220
@@ -343,8 +343,8 @@ tile21-rent4house = 8700
 tile21-renthotel = 875
 tile21-group = red
 tile21-mortgageValue=110
-tile21-coordX = 0000000
-tile21-coordY = 0000000
+tile21-coordX = 1
+tile21-coordY = 0
 
 tile22-name = Chance
 tile22-price = NULL
@@ -358,8 +358,8 @@ tile22-rent4house = NULL
 tile22-renthotel = NULL
 tile22-group = Chance
 tile22-mortgageValue=NULL
-tile22-coordX = 0000000
-tile22-coordY = 0000000
+tile22-coordX = 2
+tile22-coordY = 0
 
 tile23-name = Indiana Avenue
 tile23-price = 220
@@ -373,8 +373,8 @@ tile23-rent4house = 875
 tile23-renthotel = 1050
 tile23-group = red
 tile23-mortgageValue=110
-tile23-coordX = 0000000
-tile23-coordY = 0000000
+tile23-coordX = 3
+tile23-coordY = 0
 
 
 tile24-name = Illinois Avenue
@@ -389,8 +389,8 @@ tile24-rent4house = 925
 tile24-renthotel = 1100
 tile24-group = red
 tile24-mortgageValue=120
-tile24-coordX = 0000000
-tile24-coordY = 0000000
+tile24-coordX = 4
+tile24-coordY = 0
 
 
 tile25-name = B&O Railroad
@@ -405,8 +405,8 @@ tile25-rent4house = NULL
 tile25-renthotel = NULL
 tile25-group = railroad
 tile25-mortgageValue= 100
-tile25-coordX = 0000000
-tile25-coordY = 0000000
+tile25-coordX = 5
+tile25-coordY = 0
 
 tile26-name = Atlantic Avenue
 tile26-price = 260
@@ -420,8 +420,8 @@ tile26-rent4house = 975
 tile26-renthotel = 1150
 tile26-group = yellow
 tile26-mortgageValue=130
-tile26-coordX = 0000000
-tile26-coordY = 0000000
+tile26-coordX = 6
+tile26-coordY = 0
 
 
 tile27-name = Ventnor Avenue
@@ -436,8 +436,8 @@ tile27-rent4house = 975
 tile27-renthotel = 1150
 tile27-group = yellow
 tile27-mortgageValue= 130
-tile27-coordX = 0000000
-tile27-coordY = 0000000
+tile27-coordX = 7
+tile27-coordY = 0
 
 
 tile28-name = Water Works
@@ -452,8 +452,8 @@ tile28-rent4house = NULL
 tile28-renthotel = NULL
 tile28-group = utility
 tile28-mortgageValue= 75
-tile28-coordX = 0000000
-tile28-coordY = 0000000
+tile28-coordX = 8
+tile28-coordY = 0
 
 
 tile29-name = Marvin Gardens
@@ -468,8 +468,8 @@ tile29-rent4house = 1025
 tile29-renthotel = 1200
 tile29-group = yellow
 tile29-mortgageValue= 140
-tile29-coordX = 0000000
-tile29-coordY = 0000000
+tile29-coordX = 9
+tile29-coordY = 0
 
 
 tile30-name = Go To Jail
@@ -484,8 +484,8 @@ tile30-rent4house = NULL
 tile30-renthotel = NULL
 tile30-group = cornersAndTax
 tile30-mortgageValue=NULL
-tile30-coordX = 0000000
-tile30-coordY = 0000000
+tile30-coordX = 10
+tile30-coordY = 0
 
 
 tile31-name = Pacific Avenue
@@ -500,8 +500,8 @@ tile31-rent4house = 1100
 tile31-renthotel = 1275
 tile31-group = green
 tile31-mortgageValue= 150
-tile31-coordX = 0000000
-tile31-coordY = 0000000
+tile31-coordX = 10
+tile31-coordY = 1
 
 
 tile32-name = North Carolina Avenue
@@ -516,8 +516,8 @@ tile32-rent4house = 1100
 tile32-renthotel = 1275
 tile32-group = green
 tile32-mortgageValue= 150
-tile32-coordX = 0000000
-tile32-coordY = 0000000
+tile32-coordX = 10
+tile32-coordY = 2
 
 tile33-name = Community Chest
 tile33-price = NULL
@@ -531,8 +531,8 @@ tile33-rent4house = NULL
 tile33-renthotel = NULL
 tile33-group = Community Chest
 tile33-mortgageValue=NULL
-tile33-coordX = 0000000
-tile33-coordY = 0000000
+tile33-coordX = 10
+tile33-coordY = 3
 
 tile34-name = Pennsylvania Avenue
 tile34-price = 320
@@ -546,8 +546,8 @@ tile34-rent4house = 1200
 tile34-renthotel = 1400
 tile34-group = green
 tile34-mortgageValue= 160
-tile34-coordX = 0000000
-tile34-coordY = 0000000
+tile34-coordX = 10
+tile34-coordY = 4
 
 tile35-name = Short Line
 tile35-price = 200
@@ -561,8 +561,8 @@ tile35-rent4house = NULL
 tile35-renthotel = NULL
 tile35-group = railroad
 tile35-mortgageValue= 100
-tile35-coordX = 0000000
-tile35-coordY = 0000000
+tile35-coordX = 10
+tile35-coordY = 5
 
 
 tile36-name = Chance
@@ -577,8 +577,8 @@ tile36-rent4house = NULL
 tile36-renthotel = NULL
 tile36-group = Chance
 tile36-mortgageValue=NULL
-tile36-coordX = 0000000
-tile36-coordY = 0000000
+tile36-coordX = 10
+tile36-coordY = 6
 
 tile37-name = Park Place
 tile37-price = 350
@@ -592,8 +592,8 @@ tile37-rent4house = 1300
 tile37-renthotel =  1500
 tile37-group = blue
 tile37-mortgageValue= 175
-tile37-coordX = 0000000
-tile37-coordY = 0000000
+tile37-coordX = 10
+tile37-coordY = 7
 
 
 tile38-name = Luxury Tax
@@ -608,8 +608,8 @@ tile38-rent4house = NULL
 tile38-renthotel = NULL
 tile38-group = cornersAndTax
 tile38-mortgageValue=NULL
-tile38-coordX = 0000000
-tile38-coordY = 0000000
+tile38-coordX = 10
+tile38-coordY = 8
 
 tile39-name = Boardwalk
 tile39-price = 400
@@ -623,6 +623,6 @@ tile39-rent4house = 1700
 tile39-renthotel = 2000
 tile39-group = blue
 tile39-mortgageValue= 200
-tile39-coordX = 0000000
-tile39-coordY = 0000000
+tile39-coordX = 10
+tile39-coordY = 9
 
