--- a/monopoly/src/tile_en.properties
+++ b/monopoly/src/tile_en.properties
@@ -18,6 +18,7 @@ tile0-group = cornersAndTax
 tile0-mortgageValue=NULL
 tile0-coordX = 10
 tile0-coordY = 10
+tile0-rgb = NULL
 
 tile1-name = Mediterranean Avenue
 tile1-price = 60
@@ -33,6 +34,7 @@ tile1-group = purple
 tile1-mortgageValue=30
 tile1-coordX = 9
 tile1-coordY = 10
+tile1-rgb = 0xDCD0FF
 
 #TERRAIN
 tile2-name = Community Chest
@@ -49,6 +51,7 @@ tile2-group = Community Chest
 tile2-mortgageValue=NULL
 tile2-coordX = 8
 tile2-coordY = 10
+tile2-rgb = NULL
 
 tile3-name = Baltic Avenue
 tile3-price = 60
@@ -64,6 +67,7 @@ tile3-group = purple
 tile3-mortgageValue=30
 tile3-coordX = 7
 tile3-coordY = 10
+tile3-rgb = 0xDCD0FF
 
 #TERRAIN
 tile4-name = Income Tax
@@ -80,7 +84,7 @@ tile4-group = cornersAndTax
 tile4-mortgageValue=NULL
 tile4-coordX = 6
 tile4-coordY = 10
-
+tile4-rgb = NULL
 
 tile5-name = Reading Railroad
 tile5-price = 200
@@ -96,6 +100,7 @@ tile5-group = railroad
 tile5-mortgageValue= 100
 tile5-coordX = 5
 tile5-coordY = 10
+tile5-rgb = NULL
 
 
 
@@ -113,6 +118,7 @@ tile6-group = cyan
 tile6-mortgageValue=50
 tile6-coordX = 4
 tile6-coordY = 10
+tile6-rgb = 0x00FFFF
 
 tile7-name = Chance
 tile7-price = NULL
@@ -128,6 +134,8 @@ tile7-group = Chance
 tile7-mortgageValue=NULL
 tile7-coordX = 3
 tile7-coordY = 10
+tile7-rgb = NULL
+
 
 tile8-name = Vermont Avenue
 tile8-price = 100
@@ -143,6 +151,8 @@ tile8-group = cyan
 tile8-mortgageValue=50
 tile8-coordX = 2
 tile8-coordY = 10
+tile8-rgb = 0x00FFFF
+
 
 tile9-name = Oriental Avenue
 tile9-price = 120
@@ -158,6 +168,8 @@ tile9-group = cyan
 tile9-mortgageValue=60
 tile9-coordX = 1
 tile9-coordY = 10
+tile9-rgb = 0x00FFFF
+
 
 tile10-name = Jail
 tile10-price = NULL
@@ -173,6 +185,7 @@ tile10-group = cornersAndTax
 tile10-mortgageValue=NULL
 tile10-coordX = 0
 tile10-coordY = 10
+tile10-rgb = NULL
 
 tile11-name = St. Charles Place
 tile11-price = 140
@@ -188,6 +201,7 @@ tile11-group = magenta
 tile11-mortgageValue=70
 tile11-coordX = 0
 tile11-coordY = 9
+tile11-rgb = 0xFF00FF
 
 tile12-name = Electric Company
 tile12-price = 150
@@ -203,6 +217,7 @@ tile12-group = utility
 tile12-mortgageValue= 75
 tile12-coordX = 0
 tile12-coordY = 8
+tile12-rgb = NULL
 
 tile13-name = States Avenue
 tile13-price = 140
@@ -218,8 +233,7 @@ tile13-group = magenta
 tile13-mortgageValue=70
 tile13-coordX = 0
 tile13-coordY = 7
-
-
+tile13-rgb = 0xFF00FF
 
 tile14-name = Virginia Avenue
 tile14-price = 160
@@ -235,7 +249,7 @@ tile14-group = magenta
 tile14-mortgageValue=80
 tile14-coordX = 0
 tile14-coordY = 6
-
+tile14-rgb = 0xFF00FF
 
 tile15-name = Pennsylvania Railroad
 tile15-price = 200
@@ -251,6 +265,7 @@ tile15-group = railroad
 tile15-mortgageValue= 100
 tile15-coordX = 0
 tile15-coordY = 5
+tile15-rgb = NULL
 
 
 tile16-name = St. James Place
@@ -267,6 +282,7 @@ tile16-group = orange
 tile16-mortgageValue=90
 tile16-coordX = 0
 tile16-coordY = 4
+tile16-rgb = 0xFFA500
 
 
 tile17-name = Community Chest
@@ -283,6 +299,8 @@ tile17-group = Community Chest
 tile17-mortgageValue=NULL
 tile17-coordX = 0
 tile17-coordY = 3
+tile17-rgb = NULL
+
 
 
 tile18-name = Tennessee Avenue
@@ -299,6 +317,7 @@ tile18-group = orange
 tile18-mortgageValue=90
 tile18-coordX = 0
 tile18-coordY = 2
+tile18-rgb = 0xFFA500
 
 
 tile19-name = New York Avenue
@@ -315,6 +334,8 @@ tile19-group = orange
 tile19-mortgageValue=100
 tile19-coordX = 0
 tile19-coordY = 1
+tile19-rgb = 0xFFA500
+
 
 tile20-name = Free Parking
 tile20-price = NULL
@@ -330,6 +351,8 @@ tile20-group = cornersAndTax
 tile20-mortgageValue=NULL
 tile20-coordX = 0
 tile20-coordY = 0
+tile20-rgb = NULL
+
 
 tile21-name = Kentucky Avenue
 tile21-price = 220
@@ -345,6 +368,7 @@ tile21-group = red
 tile21-mortgageValue=110
 tile21-coordX = 1
 tile21-coordY = 0
+tile21-rgb = 0xFF0000
 
 tile22-name = Chance
 tile22-price = NULL
@@ -360,6 +384,7 @@ tile22-group = Chance
 tile22-mortgageValue=NULL
 tile22-coordX = 2
 tile22-coordY = 0
+tile22-rgb = NULL
 
 tile23-name = Indiana Avenue
 tile23-price = 220
@@ -375,6 +400,7 @@ tile23-group = red
 tile23-mortgageValue=110
 tile23-coordX = 3
 tile23-coordY = 0
+tile23-rgb = 0xFF0000
 
 
 tile24-name = Illinois Avenue
@@ -391,6 +417,7 @@ tile24-group = red
 tile24-mortgageValue=120
 tile24-coordX = 4
 tile24-coordY = 0
+tile24-rgb = 0xFF0000
 
 
 tile25-name = B&O Railroad
@@ -407,6 +434,7 @@ tile25-group = railroad
 tile25-mortgageValue= 100
 tile25-coordX = 5
 tile25-coordY = 0
+tile25-rgb = NULL
 
 tile26-name = Atlantic Avenue
 tile26-price = 260
@@ -422,6 +450,7 @@ tile26-group = yellow
 tile26-mortgageValue=130
 tile26-coordX = 6
 tile26-coordY = 0
+tile26-rgb = 0xFFFF00
 
 
 tile27-name = Ventnor Avenue
@@ -438,6 +467,7 @@ tile27-group = yellow
 tile27-mortgageValue= 130
 tile27-coordX = 7
 tile27-coordY = 0
+tile27-rgb = 0xFFFF00
 
 
 tile28-name = Water Works
@@ -454,6 +484,7 @@ tile28-group = utility
 tile28-mortgageValue= 75
 tile28-coordX = 8
 tile28-coordY = 0
+tile28-rgb = NULL
 
 
 tile29-name = Marvin Gardens
@@ -470,6 +501,7 @@ tile29-group = yellow
 tile29-mortgageValue= 140
 tile29-coordX = 9
 tile29-coordY = 0
+tile29-rgb = 0xFFFF00
 
 
 tile30-name = Go To Jail
@@ -486,6 +518,7 @@ tile30-group = cornersAndTax
 tile30-mortgageValue=NULL
 tile30-coordX = 10
 tile30-coordY = 0
+tile30-rgb = NULL
 
 
 tile31-name = Pacific Avenue
@@ -502,6 +535,7 @@ tile31-group = green
 tile31-mortgageValue= 150
 tile31-coordX = 10
 tile31-coordY = 1
+tile31-rgb = 0x008000
 
 
 tile32-name = North Carolina Avenue
@@ -518,6 +552,7 @@ tile32-group = green
 tile32-mortgageValue= 150
 tile32-coordX = 10
 tile32-coordY = 2
+tile32-rgb = 0x008000
 
 tile33-name = Community Chest
 tile33-price = NULL
@@ -533,6 +568,7 @@ tile33-group = Community Chest
 tile33-mortgageValue=NULL
 tile33-coordX = 10
 tile33-coordY = 3
+tile33-rgb = NULL
 
 tile34-name = Pennsylvania Avenue
 tile34-price = 320
@@ -548,6 +584,7 @@ tile34-group = green
 tile34-mortgageValue= 160
 tile34-coordX = 10
 tile34-coordY = 4
+tile34-rgb = 0x008000
 
 tile35-name = Short Line
 tile35-price = 200
@@ -563,6 +600,7 @@ tile35-group = railroad
 tile35-mortgageValue= 100
 tile35-coordX = 10
 tile35-coordY = 5
+tile35-rgb = NULL
 
 
 tile36-name = Chance
@@ -579,6 +617,7 @@ tile36-group = Chance
 tile36-mortgageValue=NULL
 tile36-coordX = 10
 tile36-coordY = 6
+tile36-rgb = NULL
 
 tile37-name = Park Place
 tile37-price = 350
@@ -594,6 +633,7 @@ tile37-group = blue
 tile37-mortgageValue= 175
 tile37-coordX = 10
 tile37-coordY = 7
+tile37-rgb = 0x0000FF
 
 
 tile38-name = Luxury Tax
@@ -610,6 +650,7 @@ tile38-group = cornersAndTax
 tile38-mortgageValue=NULL
 tile38-coordX = 10
 tile38-coordY = 8
+tile38-rgb = NULL
 
 tile39-name = Boardwalk
 tile39-price = 400
@@ -625,4 +666,5 @@ tile39-group = blue
 tile39-mortgageValue= 200
 tile39-coordX = 10
 tile39-coordY = 9
+tile39-rgb = 0x0000FF
 
