--- a/monopoly/src/chance_en.properties
+++ b/monopoly/src/chance_en.properties
@@ -6,34 +6,35 @@
 
 
 
+# C H A N C E   C A R D S 
 #MOVEMENT CARDS
-card0-name =Back you go!
-card0-cardText = Go back 3 spaces  
-card0-newPosition = -3
+chance0-name =Back you go!
+chance0-cardText = Go back 3 spaces  
+chance0-newPosition = -3
 
-card1-name = Advance to Pennsylvania Railroad
-card1-cardText = Take a trip to Pennsylvania Railroad - if you pass Go, collect $200
-card1-newPosition = 15
+chance1-name = Advance to Pennsylvania Railroad
+chance1-cardText = Take a trip to Pennsylvania Railroad - if you pass Go, collect $200
+chance1-newPosition = 15
 
-card2-name = Advance to St. Charles Place
-card2-cardText = Advance to St. Charles Place - if you pass Go, collect $200 
-card2-newPosition = 11
+chance2-name = Advance to St. Charles Place
+chance2-cardText = Advance to St. Charles Place - if you pass Go, collect $200 
+chance2-newPosition = 11
 
-card3-name = Advance to Illinois Ave
-card3-cardText = Advance to Illinois Ave - if you pass Go, collect $200  
-card3-newPosition = 24
+chance3-name = Advance to Illinois Ave
+chance3-cardText = Advance to Illinois Ave - if you pass Go, collect $200  
+chance3-newPosition = 24
 
-card4-name = Advance to Go
-card4-cardText = Advance to Go (Collect $200) 
-card4-newPosition = 0
+chance4-name = Advance to Go
+chance4-cardText = Advance to Go (Collect $200) 
+chance4-newPosition = 0
 
-card5-name = Take a walk on the Boardwalk
-card5-cardText = Take a walk on the Boardwalk - advance token to Boardwalk 
-card5-newPosition = 39
+chance5-name = Take a walk on the Boardwalk
+chance5-cardText = Take a walk on the Boardwalk - advance token to Boardwalk 
+chance5-newPosition = 39
 
-card6-name = Go directly to Jail
-card6-cardText = Go directly to Jail - do not pass Go, do not collect $200 
-card6-newPosition = 10
+chance6-name = Go directly to Jail
+chance6-cardText = Go directly to Jail - do not pass Go, do not collect $200 
+chance6-newPosition = 10
 
 
 
@@ -51,6 +52,6 @@ card6-newPosition = 10
 #GET VARIABLE SUM EVENT
 #use a code to tell Class which method it should use to calculate the variable sum..
 #otherwise we have to make classes for each type
-cardX-variableSumCode = 0
+chanceX-variableSumCode = 0
 
 #GET JAIL-FREE CARD 
