Played Guitar with Billie Joe Armstrong

--- a/monopoly/src/events_en.properties
+++ b/monopoly/src/events_en.properties
@@ -1,10 +1,32 @@
 #
 #File Name : tile_en.properties
 #
+#OTHER EVENTS
+#MOVEMENT TYPE
+goToJail-name=Go To Jail
+goToJail-cardText= You go directly to jail, do not pass go, do not collect 200 dollars
+goToJail-newPosition=10
 
-#CHANCE CARDS
+
+#GET VARIABLE SUM EVENT
+#use a code to tell Class which method it should use to calculate the variable sum..
+#otherwise we have to make classes for each type
+# CODES
+# 0 = free parking
+#
+freeParking-name=Free Parking
+freeParking-cardText="You receive all the money that player's have paid in fees, Enjoy!"
+freeParking-variableSumCode = 0
+
+incomeTax-name=Income Tax
+incomeTax-cardText="Pay income tax.  You may pay either 10% of your money, or a flat rate of $200"
+incomeTax-variableSumCode = 4
 
 
+#GET FIXED SUM CARDS
+go-name= GO
+go-cardText= Collect $200.00 as you pas GO!
+go-amount = 200
 
 # C H A N C E   C A R D S 
 #MOVEMENT CARDS
@@ -39,19 +61,10 @@ chance6-newPosition = 10
 
 
 
-#GET FIXED SUM CARDS
-
-
 #CASH TRANSFER CARDS
 
 
 
 
-
-
-#GET VARIABLE SUM EVENT
-#use a code to tell Class which method it should use to calculate the variable sum..
-#otherwise we have to make classes for each type
-chanceX-variableSumCode = 0
 
 #GET JAIL-FREE CARD 
