repairing the damage done to my beautiful classes

--- a/monopoly/src/events_en.properties
+++ b/monopoly/src/events_en.properties
@@ -16,7 +16,7 @@ goToJail-newPosition=10
 #
 freeParking-name=Free Parking
 freeParking-cardText="You receive all the money that player's have paid in fees, Enjoy!"
-freeParking-variableSumCode = 0
+freeParking-variableSumCode = 20
 
 incomeTax-name=Income Tax
 incomeTax-cardText="Pay income tax.  You may pay either 10% of your money, or a flat rate of $200"
@@ -28,6 +28,14 @@ go-name= GO
 go-cardText= Collect $200.00 as you pas GO!
 go-amount = 200
 
+#LUXURY TAX
+luxuryTax-name=Luxury Tax
+luxuryTax-cardText=You must pay tax on your luxuries - pay $100
+luxuryTax-amount=-100
+
+
+# C H A N C E   C A R D S 
+# C H A N C E   C A R D S 
 # C H A N C E   C A R D S 
 #MOVEMENT CARDS
 chance0-name =Back you go!
@@ -59,12 +67,60 @@ chance6-cardText = Go directly to Jail - do not pass Go, do not collect $200
 chance6-newPosition = 10
 
 
+#PAY PER HOUSE/HOTEL CARDS
+chance7-name=Street Repairs
+chance7-cardText=You are assessed for street repairs - $40 per house, $115 per hotel 
+chance7-chargePerHouse=40
+chance7-chargePerHotel=115
 
-
-#CASH TRANSFER CARDS
-
-
-
-
+chance8-name=General Repairs
+chance8-cardText=You are assessed for general repairs - $50 per house, $125 per hotel 
+chance8-chargePerHouse=50
+chance8-chargePerHotel=125
 
 #GET JAIL-FREE CARD 
+chance9-name=Get out of jail free.
+chance9-cardText=Get out of Jail Free \u2013 this card may be kept until needed, or traded/sold  
+
+
+#GET FIXED SUM CARDS
+chance10-name=Drunk Driving
+chance10-cardText=Police write you a ticket for drunk driving, pay $40 
+chance10-fixedSum=-240
+
+chance11-name=Loan Maturity
+chance11-cardText=Your building loan matures - collect $150  
+chance11-fixedSum=150
+
+chance12-name=Lotto Winner!
+chance12-cardText=You win the lottery - collect $300  
+chance12-fixedSum=300
+
+chance13-name=School Costs
+chance13-cardText=Pay $400 for school costs in your town.  
+chance13-fixedSum=400
+
+chance13-name=School Costs
+chance13-cardText=Pay $400 for school costs in your town.  
+chance13-fixedSum=-400
+
+chance14-name=Speeder
+chance14-cardText=Police write you a ticket for drunk driving, pay $140  
+chance14-fixedSum=-140
+
+chance15-name=Bank Dividend
+chance15-cardText=Bank pays dividend of 300  
+chance15-fixedSum=300
+
+# C O M M U N I T Y   C H E S T   C A R D S
+# C O M M U N I T Y   C H E S T   C A R D S
+# C O M M U N I T Y   C H E S T   C A R D S
+
+#CASH TRANSFER CARDS
+commchest0-name=It is your birthday 
+commchest0-cardText=Collect $20 from each player
+commchest0-transferAmount=20
+
+
+
+
