--- a/monopoly/src/events_en.properties
+++ b/monopoly/src/events_en.properties
@@ -9,11 +9,6 @@ goToJail-newPosition=10
 
 
 #GET VARIABLE SUM EVENT
-#use a code to tell Class which method it should use to calculate the variable sum..
-#otherwise we have to make classes for each type
-# CODES
-# 0 = free parking
-#
 freeParking-name=Free Parking
 freeParking-cardText="You receive all the money that player's have paid in fees, Enjoy!"
 freeParking-variableSumCode = 20
@@ -80,7 +75,7 @@ chance8-chargePerHotel=125
 
 #GET JAIL-FREE CARD 
 chance9-name=Get out of jail free.
-chance9-cardText=Get out of Jail Free \u2013 this card may be kept until needed, or traded/sold  
+chance9-cardText=Get out of Jail Free - this card may be kept until needed, or traded/sold  
 
 
 #GET FIXED SUM CARDS
@@ -116,11 +111,74 @@ chance15-fixedSum=300
 # C O M M U N I T Y   C H E S T   C A R D S
 # C O M M U N I T Y   C H E S T   C A R D S
 
-#CASH TRANSFER CARDS
-commchest0-name=It is your birthday 
-commchest0-cardText=Collect $20 from each player
-commchest0-transferAmount=20
+#MOVEMENT CARDS
+commchest0-name = Advance to Go
+commchest0-cardText = Advance to Go (Collect $200) 
+commchest0-newPosition = 0
 
+commchest1-name = Go directly to Jail
+commchest1-cardText = Go directly to Jail - do not pass Go, do not collect $200 
+commchest1-newPosition = 10
+
+commchest2-name = Mediterranean Avenue
+commchest2-cardText = Advance token to Mediterranean Avenue
+commchest2-newPosition = 1
+
+#CASH TRANSFER CARDS
+commchest3-name=It is your birthday 
+commchest3-cardText=Collect $20 from each player
+commchest3-fixedSum=20
+
+#GET JAIL-FREE CARD 
+commchest4-name=Get out of jail free.
+commchest4-cardText=Get out of Jail Free - this card may be kept until needed, or traded/sold  
+
+
+#GET FIXED SUM CARDS
+commchest5-name=Doctor's Bill
+commchest5-cardText=Pay $200 for a doctors bill. You're health is worth it!
+commchest5-fixedSum=-200
+
+commchest6-name=Sold Stock
+commchest6-cardText=You receive $200 for a sold stock.
+commchest6-fixedSum=200
+
+commchest7-name=Tax Refund
+commchest7-cardText=You receive a $100 tax refund! 
+commchest7-fixedSum=100
+
+commchest8-name=Bank Error
+commchest8-cardText=The bank makes in an error in your favor, you receive $400
+commchest8-fixedSum=400
+
+
+commchest9-name=Beauty Competition
+commchest9-cardText=You win 2nd place in a beauty competition and receive $30
+commchest9-fixedSum=30
+
+commchest10-name=Interest Payment
+commchest10-cardText=You receive an interest payment of $150
+commchest10-fixedSum=150
+
+commchest11-name=Yearly profit
+commchest11-cardText=You receive yearly profits of $300
+commchest11-fixedSum=300
+
+commchest12-name=Insurance Premiums
+commchest12-cardText=Your insurance premiums have been increased, pay $250
+commchest12-fixedSum=-250
+
+commchest13-name=Inheritance
+commchest13-cardText=Your get your inheritance, collect $400
+commchest13-fixedSum=400
+
+commchest14-name=Hospital Costs
+commchest14-cardText=Pay $300 for hospital costs
+commchest14-fixedSum=-300
+
+commchest15-name=Pay or Chance
+commchest15-cardText=Your may pay a fee of $20 or choose to draw a Chance card.
+commchest15-fixedSum=-20
 
 
 
