player observer pattern events in french

--- a/monopoly/src/events_fr.properties
+++ b/monopoly/src/events_fr.properties
@@ -35,20 +35,20 @@ luxuryTax-amount=-100
 # C H A N C E   C A R D S
  
 #MOVEMENT CARDS
-chance0-name =Back you go!
-chance0-cardText = Go back 3 spaces  
+chance0-name =Reculez!
+chance0-cardText = Recule de 3 casses.  
 chance0-newPosition = -3
 
-chance1-name = Advance to Pennsylvania Railroad
-chance1-cardText = Take a trip to Pennsylvania Railroad - if you pass Go, collect $200
+chance1-name =Funiculaires réunis SA
+chance1-cardText =Tu vas en excursion sur la case des «Funiculaires réunis SA» et, si la route passe le «Start», on te verse Fr. 4 000.- de prime.
 chance1-newPosition = 15
 
-chance2-name = Advance to St. Charles Place
-chance2-cardText = Advance to St. Charles Place - if you pass Go, collect $200 
+chance2-name Bâle-Steinenvorstadt
+chance2-cardText = En route pour «Bâle-Steinenvorstadt». Si ton chemin passe par le «Start», on te verse Fr. 4 000.- de prime.  
 chance2-newPosition = 11
 
-chance3-name = Advance to Illinois Ave
-chance3-cardText = Advance to Illinois Ave - if you pass Go, collect $200  
+chance3-name = «Berne-Place fédérale»
+chance3-cardText =En route pour «Berne-Place fédérale». Si ton chemin passe par le «Start», on te verse Fr. 4 000.- de prime.
 chance3-newPosition = 24
 
 chance4-name = Advance to Go
