--- a/monopoly/src/events_fr.properties
+++ b/monopoly/src/events_fr.properties
@@ -3,8 +3,8 @@
 #
 #OTHER EVENTS
 #MOVEMENT TYPE
-goToJail-name=Go To Jail
-goToJail-cardText= You go directly to jail, do not pass go, do not collect 200 dollars
+goToJail-name=Directement en prison 
+goToJail-cardText= Directement en prison (sans passer par le «Start». Ne touche point de prime) 
 goToJail-newPosition=10
 
 
@@ -51,50 +51,50 @@ chance3-name = «Berne-Place fédérale»
 chance3-cardText =En route pour «Berne-Place fédérale». Si ton chemin passe par le «Start», on te verse Fr. 4 000.- de prime.
 chance3-newPosition = 24
 
-chance4-name = Advance to Go
-chance4-cardText = Advance to Go (Collect $200) 
+chance4-name = Avance sur «Start»
+chance4-cardText = Avance sur «Start» 
 chance4-newPosition = 0
 
-chance5-name = Take a walk on the Boardwalk
-chance5-cardText = Take a walk on the Boardwalk - advance token to Boardwalk 
+chance5-name = «Zurich-Paradeplatz»
+chance5-cardText = En route pour «Zurich-Paradeplatz» 
 chance5-newPosition = 39
 
-chance6-name = Go directly to Jail
-chance6-cardText = Go directly to Jail - do not pass Go, do not collect $200 
+chance6-name = Directement en prison
+chance6-cardText = Directement en prison (sans passer par le «Start». Ne touche point de prime) 
 chance6-newPosition = 10
 
 
 #PAY PER HOUSE/HOTEL CARDS
-chance7-name=Street Repairs
-chance7-cardText=You are assessed for street repairs - $40 per house, $115 per hotel 
-chance7-chargePerHouse=40
-chance7-chargePerHotel=115
+chance7-name=réparatition de la chaussée
+chance7-cardText=Paie pour réparatition de la chaussée \nFr. 800- par maison\nFr. 2300- par hôtel
+chance7-chargePerHouse=800
+chance7-chargePerHotel=2300
 
-chance8-name=General Repairs
-chance8-cardText=You are assessed for general repairs - $50 per house, $125 per hotel 
-chance8-chargePerHouse=50
-chance8-chargePerHotel=125
+chance8-name=réparations générales
+chance8-cardText=Doit payer pour réparations générales: \nFr. 500- par maison\nFr. 2000- par hôtel
+chance8-chargePerHouse=500
+chance8-chargePerHotel=2000
 
 #GET JAIL-FREE CARD 
-chance9-name=Get out of jail free.
-chance9-cardText=Get out of Jail Free - this card may be kept until needed, or traded/sold  
+chance9-name=Carte de «Sort immédiatement de prison»
+chance9-cardText=Sort immédiatement de prison sans payer d'amende. On garde cette carte et l'on est libéré de toute détention future. On peut aussi la vendre.  
 
 #GET FIXED SUM CARDS
-chance10-name=Drunk Driving
-chance10-cardText=Police write you a ticket for drunk driving, pay $40 
-chance10-fixedSum=-240
+chance10-name=état d'ébriété
+chance10-cardText=Amende pour avoir été en état d'ébriété 
+chance10-fixedSum=-40
 
-chance11-name=Loan Maturity
-chance11-cardText=Your building loan matures - collect $150  
-chance11-fixedSum=150
+chance11-name=Remboursement d'un emprunt
+chance11-cardText=Remboursement d'un emprunt. On te verse Fr. 3 000-  
+chance11-fixedSum=3000
 
-chance12-name=Lotto Winner!
-chance12-cardText=You win the lottery - collect $300  
-chance12-fixedSum=300
+chance12-name=Gagné!
+chance12-cardText=Lot gagnant de la loterie de la Suisse Romande\nFr. 2 000-  
+chance12-fixedSum=2000
 
-chance13-name=School Costs
-chance13-cardText=Pay $400 for school costs in your town.  
-chance13-fixedSum=400
+chance13-name=titre d'écolage
+chance13-cardText=Doit payer à titre d'écolage. Fr. 3 000-
+chance13-fixedSum=3000
 
 chance13-name=School Costs
 chance13-cardText=Pay $400 for school costs in your town.  
