added method initGUI() to BoardController

--- a/monopoly/src/events_fr.properties
+++ b/monopoly/src/events_fr.properties
@@ -96,17 +96,13 @@ chance13-name=titre d'écolage
 chance13-cardText=Doit payer à titre d'écolage. Fr. 3 000-
 chance13-fixedSum=3000
 
-chance13-name=School Costs
-chance13-cardText=Pay $400 for school costs in your town.  
-chance13-fixedSum=-400
+chance14-name=excés de vitesse
+chance14-cardText=Amende pour excés de vitesse. Fr. 300.-  
+chance14-fixedSum=-300
 
-chance14-name=Speeder
-chance14-cardText=Police write you a ticket for drunk driving, pay $140  
-chance14-fixedSum=-140
-
-chance15-name=Bank Dividend
-chance15-cardText=Bank pays dividend of 300  
-chance15-fixedSum=300
+chance15-name=Dividende de la banque
+chance15-cardText=La banque verse une dividende de Fr. 1 000.-  
+chance15-fixedSum=1000
 
 
 
@@ -115,51 +111,51 @@ chance15-fixedSum=300
 # C O M M U N I T Y   C H E S T   C A R D S
 
 #MOVEMENT CARDS
-commchest0-name = Advance to Go
-commchest0-cardText = Advance to Go (Collect $200) 
-commchest0-newPosition = 0
+commchest0-name =«Start»
+commchest0-cardText =En route pour le  
+commchest0-newPosition =0
 
-commchest1-name = Go directly to Jail
-commchest1-cardText = Go directly to Jail - do not pass Go, do not collect $200 
-commchest1-newPosition = 10
+commchest1-name =Directement en prison 
+commchest1-cardText =Directement en prison (sans passer par le «Start». Ne touche point de prime) 
+commchest1-newPosition =10
 
-commchest2-name = Mediterranean Avenue
-commchest2-cardText = Advance token to Mediterranean Avenue
+commchest2-name =Retour!
+commchest2-cardText = Retour à «Coire-Kornplatz
 commchest2-newPosition = 1
 
 #CASH TRANSFER CARDS
-commchest3-name=It is your birthday 
-commchest3-cardText=Collect $20 from each player
-commchest3-fixedSum=20
+commchest3-name=Joyeux anniversaire! 
+commchest3-cardText=Tu as tun anniversaire et chaque jouer t'offre Fr. 200.-
+commchest3-fixedSum=200
 
 #GET JAIL-FREE CARD 
-commchest4-name=Get out of jail free.
-commchest4-cardText=Get out of Jail Free - this card may be kept until needed, or traded/sold  
+commchest4-name=Carte de «Sort immédiatement de prison»
+commchest4-cardText=Sort immédiatement de prison sans payer d'amende. On garde cette carte et l'on est libéré de toute détention future. On peut aussi la vendre.  
 
 #GET FIXED SUM CARDS
-commchest5-name=Doctor's Bill
-commchest5-cardText=Pay $200 for a doctors bill. You're health is worth it!
-commchest5-fixedSum=-200
+commchest5-name=facture de médecin
+commchest5-cardText=Paie la facture de ton médecin. Fr. 1 000.-
+commchest5-fixedSum=-1000
 
-commchest6-name=Sold Stock
-commchest6-cardText=You receive $200 for a sold stock.
-commchest6-fixedSum=200
+commchest6-name=action vendue
+commchest6-cardText=Tu vends une action et tu touches Fr. 1 000-
+commchest6-fixedSum=1000
 
-commchest7-name=Tax Refund
-commchest7-cardText=You receive a $100 tax refund! 
-commchest7-fixedSum=100
+commchest7-name=Le fisc rembourse!
+commchest7-cardText=Le fisc te rembourse Fr. 400.- 
+commchest7-fixedSum=400
 
-commchest8-name=Bank Error
-commchest8-cardText=The bank makes in an error in your favor, you receive $400
-commchest8-fixedSum=400
+commchest8-name=Erreur de la banque
+commchest8-cardText=La banque s'est trompée en ta faveur et te rembourse Fr. 4 000.-
+commchest8-fixedSum=4000
 
-commchest9-name=Beauty Competition
-commchest9-cardText=You win 2nd place in a beauty competition and receive $30
-commchest9-fixedSum=30
+commchest9-name=Concours de beauté
+commchest9-cardText=Tu es sorti deuxième  d'un concours de beauté et tu gagnes Fr. 200.-
+commchest9-fixedSum=200
 
-commchest10-name=Interest Payment
-commchest10-cardText=You receive an interest payment of $150
-commchest10-fixedSum=150
+commchest10-name=les intérêts
+commchest10-cardText=On te paies les intérêts. Fr. 500.-
+commchest10-fixedSum=500
 
 commchest11-name=Yearly profit
 commchest11-cardText=You receive yearly profits of $300
