--- a/monopoly/src/events_fr.properties
+++ b/monopoly/src/events_fr.properties
@@ -157,25 +157,25 @@ commchest10-name=les intérêts
 commchest10-cardText=On te paies les intérêts. Fr. 500.-
 commchest10-fixedSum=500
 
-commchest11-name=Yearly profit
-commchest11-cardText=You receive yearly profits of $300
-commchest11-fixedSum=300
+commchest11-name=Rente Annuelle
+commchest11-cardText=On t'alloue une rente annuelle de Fr. 2 000.-
+commchest11-fixedSum=2000
 
-commchest12-name=Insurance Premiums
-commchest12-cardText=Your insurance premiums have been increased, pay $250
-commchest12-fixedSum=-250
+commchest12-name=Police d'assurance
+commchest12-cardText=Paie une police d'assurance de Fr. 1 000.-
+commchest12-fixedSum=-1050
 
-commchest13-name=Inheritance
-commchest13-cardText=Your get your inheritance, collect $400
-commchest13-fixedSum=400
+commchest13-name=héritage
+commchest13-cardText=Grâce à un héritage, tu touches Fr. 2 000.-
+commchest13-fixedSum=2000
 
-commchest14-name=Hospital Costs
-commchest14-cardText=Pay $300 for hospital costs
-commchest14-fixedSum=-300
+commchest14-name=Frais d'hôpital
+commchest14-cardText=Tes frais d'hôpital s'élévent à Fr. 2 000.-
+commchest14-fixedSum=-2000
 
-commchest15-name=Pay or Chance
-commchest15-cardText=Your may pay a fee of $20 or choose to draw a Chance card.
-commchest15-fixedSum=-20
+commchest15-name=Amende
+commchest15-cardText=Paie Fr. 200.- d'amende ou prends un billet de «Chance»
+commchest15-fixedSum=-200
 
 
 
